# release-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release-2023.01.adoc  requirements.txt
summarizer/: __init__.py  __main__.py  args.py  main.py  summary.py  version.py
summarizer/templates/: release-notes.adoc.j2
